@@ -13,18 +13,21 @@
 // limitations under the License.
 package com.google.devtools.build.lib.rules.java;
 
+import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.truth.Truth.assertThat;
+import static com.google.common.truth.Truth8.assertThat;
 import static com.google.devtools.build.lib.actions.util.ActionsTestUtil.prettyArtifactNames;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Streams;
 import com.google.devtools.build.lib.analysis.ConfiguredTarget;
 import com.google.devtools.build.lib.analysis.util.BuildViewTestCase;
 import com.google.devtools.build.lib.cmdline.Label;
+import com.google.devtools.build.lib.collect.nestedset.NestedSet;
 import com.google.devtools.build.lib.packages.StarlarkProvider;
 import com.google.devtools.build.lib.packages.StructImpl;
-import com.google.devtools.build.lib.rules.java.JavaRuleOutputJarsProvider.OutputJar;
+import com.google.devtools.build.lib.rules.cpp.LibraryToLink;
+import com.google.devtools.build.lib.rules.java.JavaRuleOutputJarsProvider.JavaOutput;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
@@ -112,10 +115,11 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
     assertThat(prettyArtifactNames(javaRuleOutputJarsProvider.getAllClassOutputJars()))
         .containsExactly("foo/my_starlark_rule_lib.jar");
 
-    assertThat(javaRuleOutputJarsProvider.getOutputJars()).hasSize(1);
-    OutputJar outputJar = javaRuleOutputJarsProvider.getOutputJars().get(0);
+    assertThat(javaRuleOutputJarsProvider.getJavaOutputs()).hasSize(1);
+    JavaOutput javaOutput = javaRuleOutputJarsProvider.getJavaOutputs().get(0);
 
-    assertThat(outputJar.getIJar().prettyPrint()).isEqualTo("foo/my_starlark_rule_lib-ijar.jar");
+    assertThat(javaOutput.getCompileJar().prettyPrint())
+        .isEqualTo("foo/my_starlark_rule_lib-ijar.jar");
   }
 
   @Test
@@ -170,6 +174,29 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
         .containsExactly("foo/my_starlark_rule_lib.jar", "foo/libmy_java_lib_direct.jar");
     assertThat(prettyArtifactNames(javaCompilationArgsProvider.getTransitiveCompileTimeJars()))
         .containsExactly("foo/my_starlark_rule_lib.jar");
+  }
+
+  /** Tests that JavaInfo can be constructed with CC native libraries as dependencies. */
+  @Test
+  public void javaInfo_setNativeLibraries() throws Exception {
+    ruleBuilder().build();
+    scratch.file(
+        "foo/BUILD",
+        "load(':extension.bzl', 'my_rule')",
+        "cc_library(name = 'my_cc_lib_direct', srcs = ['cc/a.cc'])",
+        "my_rule(name = 'my_starlark_rule',",
+        "        output_jar = 'my_starlark_rule_lib.jar',",
+        "        source_jars = ['my_starlark_rule_src.jar'],",
+        "        cc_dep = [':my_cc_lib_direct']",
+        ")");
+    assertNoEvents();
+
+    JavaInfo javaInfoProvider = fetchJavaInfo();
+
+    NestedSet<LibraryToLink> librariesForTopTarget =
+        javaInfoProvider.getTransitiveNativeLibraries();
+    assertThat(librariesForTopTarget.toList().stream().map(LibraryToLink::getLibraryIdentifier))
+        .contains("foo/libmy_cc_lib_direct");
   }
 
   @Test
@@ -413,24 +440,6 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
             "foo/libmy_java_lib_transitive-src.jar");
   }
 
-  /** Tests that JavaExportsProvider is empty by default. */
-  @Test
-  public void buildHelperCreateJavaInfoExportIsEmpty() throws Exception {
-    ruleBuilder().build();
-    scratch.file(
-        "foo/BUILD",
-        "load(':extension.bzl', 'my_rule')",
-        "my_rule(name = 'my_starlark_rule',",
-        "        output_jar = 'my_starlark_rule_lib.jar',",
-        "        source_jars = ['my_starlark_rule_src.jar']",
-        ")");
-    assertNoEvents();
-
-    JavaExportsProvider exportsProvider = fetchJavaInfo().getProvider(JavaExportsProvider.class);
-
-    assertThat(exportsProvider.getTransitiveExports().toList()).isEmpty();
-  }
-
   /** Test exports adds dependencies to JavaCompilationArgsProvider. */
   @Test
   public void buildHelperCreateJavaInfoExportProviderExportsDepsAdded() throws Exception {
@@ -446,10 +455,6 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
     assertNoEvents();
 
     JavaInfo javaInfo = fetchJavaInfo();
-
-    JavaExportsProvider exportsProvider = javaInfo.getProvider(JavaExportsProvider.class);
-
-    assertThat(exportsProvider.getTransitiveExports().toList()).isEmpty();
 
     JavaSourceJarsProvider javaSourceJarsProvider =
         javaInfo.getProvider(JavaSourceJarsProvider.class);
@@ -469,10 +474,7 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
         .containsExactly("foo/my_starlark_rule_lib.jar", "foo/libmy_java_lib_exports-hjar.jar");
   }
 
-  /**
-   * Test exports adds itself and recursive dependencies to JavaCompilationArgsProvider and
-   * JavaExportsProvider populated.
-   */
+  /** Test exports adds itself and recursive dependencies to JavaCompilationArgsProvider. */
   @Test
   public void buildHelperCreateJavaInfoExportProvider() throws Exception {
     ruleBuilder().build();
@@ -492,11 +494,6 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
     assertNoEvents();
 
     JavaInfo javaInfo = fetchJavaInfo();
-
-    JavaExportsProvider exportsProvider = javaInfo.getProvider(JavaExportsProvider.class);
-
-    assertThat(exportsProvider.getTransitiveExports().toList())
-        .containsExactly(Label.parseAbsolute("//foo:my_java_lib_b", ImmutableMap.of()));
 
     JavaCompilationArgsProvider javaCompilationArgsProvider =
         javaInfo.getProvider(JavaCompilationArgsProvider.class);
@@ -556,11 +553,6 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
 
     JavaInfo javaInfo = fetchJavaInfo();
 
-    JavaExportsProvider exportsProvider = javaInfo.getProvider(JavaExportsProvider.class);
-
-    assertThat(exportsProvider.getTransitiveExports().toList())
-        .containsExactly(Label.parseAbsolute("//foo:my_java_lib_b", ImmutableMap.of()));
-
     JavaCompilationArgsProvider javaCompilationArgsProvider =
         javaInfo.getProvider(JavaCompilationArgsProvider.class);
 
@@ -592,16 +584,8 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
   }
 
   @Test
-  public void buildHelperCreateJavaInfoPlugins() throws Exception {
+  public void buildHelperCreateJavaInfoPluginsFromExports() throws Exception {
     ruleBuilder().build();
-    scratch.file("java/test/lib.jar");
-    scratch.file(
-        "java/test/BUILD",
-        "load(':custom_rule.bzl', 'java_custom_library')",
-        "java_custom_library(",
-        "  name = 'custom',",
-        "  export = ':export',",
-        ")");
     scratch.file(
         "foo/BUILD",
         "load(':extension.bzl', 'my_rule')",
@@ -621,12 +605,29 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
         ")");
     assertNoEvents();
 
-    assertThat(
-            fetchJavaInfo()
-                .getProvider(JavaPluginInfoProvider.class)
-                .plugins()
-                .processorClasses()
-                .toList())
+    assertThat(fetchJavaInfo().getJavaPluginInfo().plugins().processorClasses().toList())
+        .containsExactly("com.google.process.stuff");
+  }
+
+  @Test
+  public void buildHelperCreateJavaInfoWithPlugins() throws Exception {
+    ruleBuilder().build();
+    scratch.file(
+        "foo/BUILD",
+        "load(':extension.bzl', 'my_rule')",
+        "java_library(name = 'plugin_dep',",
+        "    srcs = [ 'ProcessorDep.java'])",
+        "java_plugin(name = 'plugin',",
+        "    srcs = ['AnnotationProcessor.java'],",
+        "    processor_class = 'com.google.process.stuff',",
+        "    deps = [ ':plugin_dep' ])",
+        "my_rule(name = 'my_starlark_rule',",
+        "        output_jar = 'my_starlark_rule_lib.jar',",
+        "        dep_exported_plugins = [':plugin']",
+        ")");
+    assertNoEvents();
+
+    assertThat(fetchJavaInfo().getJavaPluginInfo().plugins().processorClasses().toList())
         .containsExactly("com.google.process.stuff");
   }
 
@@ -675,19 +676,183 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
     JavaRuleOutputJarsProvider ruleOutputs =
         fetchJavaInfo().getProvider(JavaRuleOutputJarsProvider.class);
 
-    assertThat(
-            prettyArtifactNames(
-                ruleOutputs.getOutputJars().stream()
-                    .map(o -> o.getClassJar())
-                    .collect(ImmutableList.toImmutableList())))
+    assertThat(prettyArtifactNames(ruleOutputs.getAllClassOutputJars()))
         .containsExactly("foo/my_starlark_rule_lib.jar");
+    assertThat(prettyArtifactNames(ruleOutputs.getAllSrcOutputJars()))
+        .containsExactly("foo/my_starlark_rule_src.jar");
     assertThat(
             prettyArtifactNames(
-                ruleOutputs.getOutputJars().stream()
-                    .flatMap(o -> Streams.stream(o.getSrcJars()))
-                    .collect(ImmutableList.toImmutableList())))
-        .containsExactly("foo/my_starlark_rule_src.jar");
-    assertThat(ruleOutputs.getJdeps().prettyPrint()).isEqualTo("foo/my_jdeps.pb");
+                ruleOutputs.getJavaOutputs().stream()
+                    .map(JavaOutput::getJdeps)
+                    .collect(toImmutableList())))
+        .containsExactly("foo/my_jdeps.pb");
+  }
+
+  @Test
+  public void buildHelperCreateJavaInfoWithGeneratedJars_javaRuleOutputJarsProvider()
+      throws Exception {
+    ruleBuilder().build();
+    scratch.file(
+        "foo/BUILD",
+        "load(':extension.bzl', 'my_rule')",
+        "java_library(name = 'my_java_lib_direct', srcs = ['java/A.java'])",
+        "my_rule(",
+        "  name = 'my_starlark_rule',",
+        "  output_jar = 'my_starlark_rule_lib.jar',",
+        "  source_jars = ['my_starlark_rule_src.jar'],",
+        "  dep = [':my_java_lib_direct'],",
+        "  generated_class_jar = 'generated_class.jar',",
+        "  generated_source_jar = 'generated_srcs.jar',",
+        ")");
+    assertNoEvents();
+
+    JavaRuleOutputJarsProvider ruleOutputs =
+        fetchJavaInfo().getProvider(JavaRuleOutputJarsProvider.class);
+
+    assertThat(
+            prettyArtifactNames(
+                ruleOutputs.getJavaOutputs().stream()
+                    .map(JavaOutput::getGeneratedClassJar)
+                    .collect(toImmutableList())))
+        .containsExactly("foo/generated_class.jar");
+    assertThat(
+            prettyArtifactNames(
+                ruleOutputs.getJavaOutputs().stream()
+                    .map(JavaOutput::getGeneratedSourceJar)
+                    .collect(toImmutableList())))
+        .containsExactly("foo/generated_srcs.jar");
+  }
+
+  @Test
+  public void buildHelperCreateJavaInfoWithGeneratedJars_javaGenJarsProvider() throws Exception {
+    ruleBuilder().build();
+    scratch.file(
+        "foo/BUILD",
+        "load(':extension.bzl', 'my_rule')",
+        "java_library(name = 'my_java_lib_direct', srcs = ['java/A.java'])",
+        "my_rule(",
+        "  name = 'my_starlark_rule',",
+        "  output_jar = 'my_starlark_rule_lib.jar',",
+        "  source_jars = ['my_starlark_rule_src.jar'],",
+        "  dep = [':my_java_lib_direct'],",
+        "  generated_class_jar = 'generated_class.jar',",
+        "  generated_source_jar = 'generated_srcs.jar',",
+        ")");
+    assertNoEvents();
+
+    JavaGenJarsProvider ruleOutputs = fetchJavaInfo().getProvider(JavaGenJarsProvider.class);
+
+    assertThat(ruleOutputs.getGenClassJar().prettyPrint()).isEqualTo("foo/generated_class.jar");
+    assertThat(ruleOutputs.getGenSourceJar().prettyPrint()).isEqualTo("foo/generated_srcs.jar");
+  }
+
+  @Test
+  public void buildHelperCreateJavaInfoWithCompileJdeps_javaRuleOutputJarsProvider()
+      throws Exception {
+    ruleBuilder().build();
+    scratch.file(
+        "foo/BUILD",
+        "load(':extension.bzl', 'my_rule')",
+        "java_library(name = 'my_java_lib_direct', srcs = ['java/A.java'])",
+        "my_rule(",
+        "  name = 'my_starlark_rule',",
+        "  output_jar = 'my_starlark_rule_lib.jar',",
+        "  source_jars = ['my_starlark_rule_src.jar'],",
+        "  dep = [':my_java_lib_direct'],",
+        "  compile_jdeps = 'compile.deps',",
+        ")");
+    assertNoEvents();
+
+    JavaRuleOutputJarsProvider ruleOutputs =
+        fetchJavaInfo().getProvider(JavaRuleOutputJarsProvider.class);
+
+    assertThat(
+            prettyArtifactNames(
+                ruleOutputs.getJavaOutputs().stream()
+                    .map(JavaOutput::getCompileJdeps)
+                    .collect(toImmutableList())))
+        .containsExactly("foo/compile.deps");
+  }
+
+  @Test
+  public void buildHelperCreateJavaInfoWithNativeHeaders_javaRuleOutputJarsProvider()
+      throws Exception {
+    ruleBuilder().build();
+    scratch.file(
+        "foo/BUILD",
+        "load(':extension.bzl', 'my_rule')",
+        "java_library(name = 'my_java_lib_direct', srcs = ['java/A.java'])",
+        "my_rule(",
+        "  name = 'my_starlark_rule',",
+        "  output_jar = 'my_starlark_rule_lib.jar',",
+        "  source_jars = ['my_starlark_rule_src.jar'],",
+        "  dep = [':my_java_lib_direct'],",
+        "  native_headers_jar = 'nativeheaders.jar',",
+        ")");
+    assertNoEvents();
+
+    JavaRuleOutputJarsProvider ruleOutputs =
+        fetchJavaInfo().getProvider(JavaRuleOutputJarsProvider.class);
+
+    assertThat(
+            prettyArtifactNames(
+                ruleOutputs.getJavaOutputs().stream()
+                    .map(JavaOutput::getNativeHeadersJar)
+                    .collect(toImmutableList())))
+        .containsExactly("foo/nativeheaders.jar");
+  }
+
+  @Test
+  public void buildHelperCreateJavaInfoWithManifestProto_javaRuleOutputJarsProvider()
+      throws Exception {
+    ruleBuilder().build();
+    scratch.file(
+        "foo/BUILD",
+        "load(':extension.bzl', 'my_rule')",
+        "java_library(name = 'my_java_lib_direct', srcs = ['java/A.java'])",
+        "my_rule(",
+        "  name = 'my_starlark_rule',",
+        "  output_jar = 'my_starlark_rule_lib.jar',",
+        "  source_jars = ['my_starlark_rule_src.jar'],",
+        "  dep = [':my_java_lib_direct'],",
+        "  manifest_proto = 'manifest.proto',",
+        ")");
+    assertNoEvents();
+
+    JavaRuleOutputJarsProvider ruleOutputs =
+        fetchJavaInfo().getProvider(JavaRuleOutputJarsProvider.class);
+
+    assertThat(
+            prettyArtifactNames(
+                ruleOutputs.getJavaOutputs().stream()
+                    .map(JavaOutput::getManifestProto)
+                    .collect(toImmutableList())))
+        .containsExactly("foo/manifest.proto");
+  }
+
+  @Test
+  public void buildHelperCreateJavaInfoWithModuleFlags() throws Exception {
+    ruleBuilder().build();
+    scratch.file(
+        "foo/BUILD",
+        "load(':extension.bzl', 'my_rule')",
+        "java_library(",
+        "    name = 'my_java_lib_direct',",
+        "    srcs = ['java/A.java'],",
+        "    add_opens = ['java.base/java.lang'],",
+        ")",
+        "my_rule(",
+        "    name = 'my_starlark_rule',",
+        "    dep = [':my_java_lib_direct'],",
+        "    output_jar = 'my_starlark_rule_lib.jar',",
+        ")");
+    assertNoEvents();
+
+    JavaModuleFlagsProvider ruleOutputs =
+        fetchJavaInfo().getProvider(JavaModuleFlagsProvider.class);
+
+    assertThat(ruleOutputs.toFlags())
+        .containsExactly("--add-opens=java.base/java.lang=ALL-UNNAMED");
   }
 
   private RuleBuilder ruleBuilder() {
@@ -723,6 +888,16 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
     private String[] newJavaInfo() {
       assertThat(useIJar && stampJar).isFalse();
       ImmutableList.Builder<String> lines = ImmutableList.builder();
+      lines.add(
+          "result = provider()",
+          "def _impl(ctx):",
+          "  ctx.actions.write(ctx.outputs.output_jar, 'JavaInfo API Test', is_executable=False) ",
+          "  dp = [dep[java_common.provider] for dep in ctx.attr.dep]",
+          "  dp_runtime = [dep[java_common.provider] for dep in ctx.attr.dep_runtime]",
+          "  dp_exports = [dep[java_common.provider] for dep in ctx.attr.dep_exports]",
+          "  dp_exported_plugins = [dep[JavaPluginInfo] for dep in ctx.attr.dep_exported_plugins]",
+          "  dp_libs = [dep[CcInfo] for dep in ctx.attr.cc_dep]");
+
       if (useIJar) {
         lines.add(
             "  compile_jar = java_common.run_ijar(",
@@ -767,7 +942,14 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
           "    deps = dp,",
           "    runtime_deps = dp_runtime,",
           "    exports = dp_exports,",
+          "    exported_plugins = dp_exported_plugins,",
           "    jdeps = ctx.file.jdeps,",
+          "    compile_jdeps = ctx.file.compile_jdeps,",
+          "    generated_class_jar = ctx.file.generated_class_jar,",
+          "    generated_source_jar = ctx.file.generated_source_jar,",
+          "    native_headers_jar = ctx.file.native_headers_jar,",
+          "    manifest_proto = ctx.file.manifest_proto,",
+          "    native_libraries = dp_libs,",
           "  )",
           "  return [result(property = javaInfo)]");
       return lines.build().toArray(new String[] {});
@@ -775,29 +957,29 @@ public class JavaInfoStarlarkApiTest extends BuildViewTestCase {
 
     private void build() throws Exception {
       if (useIJar || stampJar || sourceFiles) {
-        writeBuildFileForJavaToolchain();
+        JavaToolchainTestUtil.writeBuildFileForJavaToolchain(scratch);
       }
 
       ImmutableList.Builder<String> lines = ImmutableList.builder();
-      lines.add(
-          "result = provider()",
-          "def _impl(ctx):",
-          "  ctx.actions.write(ctx.outputs.output_jar, 'JavaInfo API Test', is_executable=False) ",
-          "  dp = [dep[java_common.provider] for dep in ctx.attr.dep]",
-          "  dp_runtime = [dep[java_common.provider] for dep in ctx.attr.dep_runtime]",
-          "  dp_exports = [dep[java_common.provider] for dep in ctx.attr.dep_exports]");
       lines.add(newJavaInfo());
       lines.add(
           "my_rule = rule(",
           "  implementation = _impl,",
           "  attrs = {",
           "    'dep' : attr.label_list(),",
+          "    'cc_dep' : attr.label_list(),",
           "    'dep_runtime' : attr.label_list(),",
           "    'dep_exports' : attr.label_list(),",
+          "    'dep_exported_plugins' : attr.label_list(),",
           "    'output_jar' : attr.output(mandatory=True),",
           "    'source_jars' : attr.label_list(allow_files=['.jar']),",
           "    'sources' : attr.label_list(allow_files=['.java']),",
           "    'jdeps' : attr.label(allow_single_file=True),",
+          "    'compile_jdeps' : attr.label(allow_single_file=True),",
+          "    'generated_class_jar' : attr.label(allow_single_file=True),",
+          "    'generated_source_jar' : attr.label(allow_single_file=True),",
+          "    'native_headers_jar' : attr.label(allow_single_file=True),",
+          "    'manifest_proto' : attr.label(allow_single_file=True),",
           useIJar || stampJar || sourceFiles
               ? "    '_toolchain': attr.label(default = Label('//java/com/google/test:toolchain')),"
               : "",
